--- a/kos_style.css
+++ b/kos_style.css
@@ -19,6 +19,18 @@
     grid-column: 1 / span 3;
     grid-row: 2 / span 4; }
 
+.data_kos {
+  margin: 10px;
+  margin-left: 205px;
+  padding: 10px; }
+  .data_kos table, .data_kos th, .data_kos td {
+    border-collapse: collapse;
+    border: 1px solid blue; }
+  .data_kos table {
+    width: 100%; }
+  .data_kos th, .data_kos td {
+    text-align: left; }
+
 .footer_info_kos {
   bottom: 10px;
   overflow: hidden;
@@ -67,6 +79,9 @@
     width: 50px; }
 
   #main_frame_kos {
+    margin-left: 50px; }
+
+  .data_kos {
     margin-left: 50px; } }
 
 /*# sourceMappingURL=kos_style.css.map */
